--- a/Lis_Ex_5_Python.ipynb
+++ b/Lis_Ex_5_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFXdosDOxOjJFBKkGkxp5T"
+      "authorship_tag": "ABX9TyOM9Sj5SvgZ3/SxhJt3yLxk"
     },
     "kernelspec": {
       "name": "python3",
@@ -278,7 +278,7 @@
         "id": "ma5fXPIG3rRG",
         "outputId": "3a605eff-a163-4196-be04-74995299711b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,7 +315,7 @@
         "id": "_wAi-Eo659I9",
         "outputId": "e552fc85-a452-4ad8-ae08-baa88c19c164"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,7 +356,7 @@
         "id": "r0TUt8b96xxn",
         "outputId": "022a3025-be67-4975-f33d-25064527441a"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,7 +393,7 @@
         "id": "S9OdyyoS7pAD",
         "outputId": "b09428a1-59c8-4910-de4d-4c47c78593bc"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,7 +429,7 @@
         "id": "qXl2gzKt8YGt",
         "outputId": "6b67da57-4ba9-47ec-d1d8-a8aca120cece"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -470,7 +470,7 @@
         "id": "29UjJdF89FXy",
         "outputId": "2bfa7947-4336-4fc7-8cde-d5322081d8b2"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,7 +506,7 @@
         "id": "PJJiMczTBuuj",
         "outputId": "852613f8-cb42-4819-aa7b-3104e561a1e4"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,7 +543,7 @@
         "id": "BwamKl5UDGBz",
         "outputId": "5a39131b-5f58-4f86-af87-6296d28c54a9"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,7 +567,7 @@
     {
       "cell_type": "code",
       "source": [
-        "salario = float(input(\"Digite o salario\"))\n",
+        "salario = float(input(\"Digite o salario: \"))\n",
         "aumento = salario * 0.05\n",
         "novo_salario = salario + aumento\n",
         "print(f\"O novo salario é de {novo_salario}\")"
@@ -577,15 +577,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nufk4Y17FhnG",
-        "outputId": "8c23de9e-7b59-4d1c-fc70-d3837cf8263a"
+        "outputId": "3a2a18bb-3c89-47bc-d9eb-0f6e922ff8e1"
       },
-      "execution_count": 17,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite o salario1000\n",
+            "Digite o salario: 1000\n",
             "O novo salario é de 1050.0\n"
           ]
         }
